--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 });
             });
         </script>
-        <script>
+        <script type="text/javascript">
             $("#form").submit((e) => {
                 e.preventDefault()
                 $.ajax({
